Improve formatting